syntax = "proto3";
// 定义了 .proto 文件中的 Protocol Buffers 包名。在 Protocol Buffers 的语境中，package 用来防止命名冲突和组织代码，类似于其他编程语言中的命名空间。它并不直接影响生成的 Go 代码的 Go 包名。
package hello;
// 意思是输出到当前目录,分号前是输出的 .pb.go 文件的路径，路径不存在会自动创建,分号后是输出的 .pb.go 文件的包名
option go_package=".;proto";
// HelloService是服务名 自己定义  定义的方法 只能选用下面的message  SayHello(HelloRequest)
service HelloService{
  rpc SayHello(HelloRequest) returns (HelloResponse);// hello接口
}

message HelloRequest{
  string name = 1;// 1是编号不是值
  int32 age = 2;
  repeated string hobby = 3;// repeated表示切片
}

message HelloResponse{
  string reply = 1;
}